🔧 Alignment and sizing fixes

--- a/ournet/print.css
+++ b/ournet/print.css
@@ -56,12 +56,13 @@ a {
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
+		align-items: center;
 		margin: 0 auto;
 		padding-top: 2cm;
 		height: 100% !important;
 
 		img {
-			max-height: 100%;
+			max-height: 23cm;
 			width: auto;
 			max-width: 100%;
 			margin: auto;
